1999-01-27  Damon Chaplin  <damon@karuna.freeserve.co.uk>

	* Makefile.am: added scripts to EXTRA_DIST and copied examples, doc
	and db2man dirs in dist-hook.

	* doc/sections-file.txt: added a couple of examples.

	* doc/setting-up.txt: new document describing how to set up a module
	to use gtk-doc.

	* doc/README: added description of setting-up.txt

	* README: added short 'Installation' section describing the
	--with-dsssl-dir option.

	* gtk-doc.dsl.in: also output links to each RefEntry page in the
	index.sgml file, so libgnomeui docs can link to widgets. (The widget
	hierarchy links were not working before.)

1999-01-26  Damon Chaplin  <damon@karuna.freeserve.co.uk>

	* gtkdoc-scan (ScanHeader): parse function declarations that have the
	return type and name on one line, and the '(' and args on the next.
	NOTE: functions with the start of the declaration split over 3 lines
	will not be parsed (e.g. return type on one line, function name on
	next, and '(' and first argument on the third.) I hope there aren't
	any.

	* gtkdoc-mkdb (OutputStruct): Use a different SGML ID for widget
	structs, since the original ID is used for the entire RefEntry.
	Also only show parts of widget structs which are marked with a
	comment '/*<public>*/'. Use '/*<private>*/' for private fields.

	* gtkdoc-mktmpl (UpdateTemplates): We include widget structs now,
	so we do want warnings if they aren't used.

	* examples/gnomeui/gnomeui-docs.sgml: 
	* examples/gnomeui/gnomeui-sections.txt:
	* examples/gnomeui/gnomeui.types:
	* examples/gnome/gnome-docs.sgml: 
	* examples/gnome/gnome-sections.txt: sync with latest source.

	* examples/configure.in: Add --with-gnome-libs-dir option, so it can
	be configured easily.
	* examples/gnomeui/Makefile.am (DOC_SOURCE_DIR): 
	* examples/gnome/Makefile.am (DOC_SOURCE_DIR): use the new
	GNOME_LIBS_DIR.

	* gtkdoc-mkdb (MergeSourceDocumentation): accept parameters names in
	the source which use the wrong case, since there are quite a few of