@@ -179,15 +179,18 @@
 			     (href-to (current-node))
 			     "\"\greater-than-sign;
 "))))
+
   ;; We also want to be able to link to complete RefEntry.
   (element refentry
-	(make formatting-instruction data:
-	      (string-append "\less-than-sign;ANCHOR id =\""
-			     (attribute-string "id" (current-node))
-			     "\" href=\""
-			     (href-to (current-node))
-			     "\"\greater-than-sign;
-")))
+    (make sequence
+      (make formatting-instruction data:
+	    (string-append "\less-than-sign;ANCHOR id =\""
+			   (attribute-string "id" (current-node))
+			   "\" href=\""
+			   (href-to (current-node))
+			   "\"\greater-than-sign;
+"))
+      (process-child-elements)))
 
   (default
     (process-child-elements)))
